--- a/rust-toolchain.toml
+++ b/rust-toolchain.toml
@@ -1,4 +1,6 @@
 [toolchain]
 # NB: If you ever change this, update Cargo.toml and all of the lines in the GHA workflows where we invoke
 # `dtolnay/rust-toolchain`
-channel = "1.85.1"
+channel    = "1.85.1"
+components = ["rust-analyzer", "clippy", "rustfmt"]
+edition    = "2024"
