--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,7 @@ assert-json-diff   = "2.0.2"
 assert_cmd         = { version = "2.0.17", features = ["color-auto"] }
 assert_fs          = { version = "1.1.3", features = ["color-auto"] }
 assert_matches     = "1.5.0"
+backon             = { version = "1.6", default-features = false, features = ["std-blocking-sleep"] }
 build-context      = "0.1.3"
 cargo_metadata     = "0.20.0"
 cgx                = { version = "0.0.8", path = "cgx" }
@@ -40,6 +41,7 @@ serde_json         = "1.0.147"
 sha2               = "0.10.9"
 shellexpand        = "3.1.1"
 snafu              = "0.8.9"
+strum              = "0.27.2"
 tame-index         = { version = "0.25.0", features = ["sparse"] }
 tar                = "0.4.44"
 tempfile           = "3.24.0"
@@ -51,6 +53,9 @@ url                = { version = "2.5.7", features = ["serde"] }
 uuid               = { version = "1.19.0", features = ["v4"] }
 vergen-gix         = { version = "1.0.9", default-features = false }
 which              = "8.0.0"
+xz2                = "0.1.7"
+zip                = "6.0.0"
+zstd               = "0.13.3"
 
 # The profile that 'dist' will build with
 [profile.dist]
