--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ assert_fs          = { version = "1.1.3", features = ["color-auto"] }
 assert_matches     = "1.5.0"
 backon             = { version = "1.6", default-features = false, features = ["std-blocking-sleep"] }
 build-context      = "0.1.3"
+bzip2              = "0.6.1"
 cargo_metadata     = "0.20.0"
 cgx                = { version = "0.0.8", path = "cgx" }
 cgx-core           = { version = "0.0.8", path = "cgx-core" }
@@ -26,14 +27,14 @@ ctrlc              = "3.5"
 etcetera           = "0.10.0"
 figment            = { version = "0.10.19", features = ["toml", "env"] }
 flate2             = "1.1.5"
-gix                = { version = "0.75", features = ["blocking-http-transport-reqwest", "max-performance-safe", "worktree-mutation"] }
+gix                = { version = "0.77", features = ["blocking-http-transport-reqwest", "max-performance-safe", "worktree-mutation"] }
 home               = "0.5.11"
 humantime-serde    = "1.1.1"
 ignore             = "0.4.25"
 insta              = { version = "1.45.0", features = ["filters"] }
 predicates         = "3.1.3"
 rand               = "0.9.2"
-reqwest            = { version = "0.12.28", default-features = false, features = ["blocking", "rustls-tls", "http2", "charset", "gzip", "system-proxy"] }
+reqwest            = { version = "0.13", default-features = false, features = ["blocking", "rustls", "http2", "charset", "gzip", "system-proxy"] }
 semver             = { version = "1.0.27", features = ["serde"] }
 serde              = { version = "1.0.228", features = ["derive"] }
 serde-cyclonedx    = "0.10.0"
@@ -42,7 +43,7 @@ sha2               = "0.10.9"
 shellexpand        = "3.1.1"
 snafu              = "0.8.9"
 strum              = "0.27.2"
-tame-index         = { version = "0.25.0", features = ["sparse"] }
+tame-index         = { version = "0.26", features = ["sparse"] }
 tar                = "0.4.44"
 tempfile           = "3.24.0"
 tokio              = { version = "1", features = ["rt", "rt-multi-thread"] }
