--- a/cgx-core/Cargo.toml
+++ b/cgx-core/Cargo.toml
@@ -20,6 +20,7 @@ ignored = [
 [dependencies]
 backon          = { workspace = true }
 build-context   = { workspace = true }
+bzip2           = { workspace = true }
 cargo_metadata  = { workspace = true }
 chrono          = { workspace = true }
 clap            = { workspace = true }
@@ -42,6 +43,7 @@ strum           = { workspace = true, features = ["derive"] }
 tame-index      = { workspace = true }
 tar             = { workspace = true }
 tempfile        = { workspace = true }
+toml            = { workspace = true }
 tracing         = { workspace = true }
 url             = { workspace = true }
 uuid            = { workspace = true }
@@ -58,7 +60,6 @@ assert-json-diff   = { workspace = true }
 assert_matches     = { workspace = true }
 insta              = { workspace = true }
 rand               = { workspace = true }
-toml               = { workspace = true }
 tracing-subscriber = { workspace = true }
 
 [lints]
