feat(prebuilt-binaries): Harden providers and expand archive/platform coverage
Improve provider download error handling (proper 404 vs other HTTP
errors), add .tgz suffix support matching cargo-binstall behavior,
generate Windows .exe-in-archive-name candidates, and add exhaustive
cache verification test. Gate platform-specific tests with #[cfg] and
isolate git source tests from prebuilt binary resolution. Add Windows
GNU target to CI matrix.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -203,6 +203,9 @@ jobs:
         include:
           - os: windows-2025
             name: Windows amd64
+          - os: windows-2025
+            name: Windows GNU amd64
+            target: x86_64-pc-windows-gnu
           - os: macos-15
             name: Mac ARM64
           - os: ubuntu-24.04
