feat: Add ability to resolve pre-built binaries for crates  (#93)
This makes extensive changes to the config, cache, resolver, and
messsages modules to add the ability to resolve pre-built binaries for
crates, preferring those pre-built binaries where possible.

There are some complex rules around when a pre-built binary is
considered, and how pre-built binaries are discovered.  This isn't all
fully tested yet and is considered WIP.

Some definite todos:

- Scrape crates.io and make a list of the top N most popular binary
  crates and test this against them all; do we find pre-built binaries
  for every crate that publishes one?  If not why not?
- Extend the integration tests to use specially-selected crates to
  ensure that the github, gitlab, and quickinstall providers are all
  properly exercised.
- Add more dedicated tests exercising the various binary providers in
  isolation
- Consider adding retry logic to the binary providers, as they can get
  throttled or run into transient network issues (to say nothing of the
  very frequent github outages these days).

Somewhat unrelated to this main work, this commit also has some
improvements to the git client, which will now perform retries if it
gets throttled, and adds some integration tests specifically for that
pathway.  This isn't tied to the prebuilt binary functionality but it
came up as part of the testing I was doing on that feature so I include
it as a target of opportunity.

Closes #47

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Install cargo-deny
         uses: taiki-e/install-action@v2
         with:
-          tool: cargo-deny@0.18.3
+          tool: cargo-deny@0.19.0
 
       - name: Install cargo-machete
         uses: taiki-e/install-action@v2
@@ -148,7 +148,7 @@ jobs:
       - name: Install cargo-deny
         uses: taiki-e/install-action@v2
         with:
-          tool: cargo-deny@0.18.3
+          tool: cargo-deny@0.19.0
 
       - name: Install cargo-machete
         uses: taiki-e/install-action@v2
@@ -188,6 +188,8 @@ jobs:
         run: cargo build --workspace
 
       - name: Run tests
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         run: cargo test --workspace
 
   # Stage 3: Tier 1 Platforms (Windows amd64, Mac ARM64, Linux musl)
@@ -203,6 +205,9 @@ jobs:
         include:
           - os: windows-2025
             name: Windows amd64
+          - os: windows-2025
+            name: Windows GNU amd64
+            target: x86_64-pc-windows-gnu
           - os: macos-15
             name: Mac ARM64
           - os: ubuntu-24.04
@@ -246,6 +251,7 @@ jobs:
       - name: Run tests
         env:
           TARGET_FLAG: ${{ matrix.target && format('--target {0}', matrix.target) || '' }}
+          GITHUB_TOKEN: ${{ github.token }}
         run: cargo test --workspace ${{ env.TARGET_FLAG }}
 
   # Stage 4: Lesser Platforms (ARM + Intel Mac)
@@ -290,6 +296,8 @@ jobs:
         run: cargo build --workspace
 
       - name: Run tests
+        env:
+          GITHUB_TOKEN: ${{ github.token }}
         run: cargo test --workspace
 
   # Aggregate job that depends on all previous builds.  This is the check that
