--- a/cgx-core/Cargo.toml
+++ b/cgx-core/Cargo.toml
@@ -18,7 +18,9 @@ ignored = [
 ]
 
 [dependencies]
+backon          = { workspace = true }
 build-context   = { workspace = true }
+bzip2           = { workspace = true }
 cargo_metadata  = { workspace = true }
 chrono          = { workspace = true }
 clap            = { workspace = true }
@@ -37,14 +39,18 @@ serde_json      = { workspace = true }
 sha2            = { workspace = true }
 shellexpand     = { workspace = true }
 snafu           = { workspace = true }
+strum           = { workspace = true, features = ["derive"] }
 tame-index      = { workspace = true }
 tar             = { workspace = true }
 tempfile        = { workspace = true }
-tokio           = { workspace = true }
+toml            = { workspace = true }
 tracing         = { workspace = true }
 url             = { workspace = true }
 uuid            = { workspace = true }
 which           = { workspace = true }
+xz2.workspace   = true
+zip.workspace   = true
+zstd.workspace  = true
 
 [target.'cfg(windows)'.dependencies]
 ctrlc = { workspace = true }
@@ -54,7 +60,6 @@ assert-json-diff   = { workspace = true }
 assert_matches     = { workspace = true }
 insta              = { workspace = true }
 rand               = { workspace = true }
-toml               = { workspace = true }
 tracing-subscriber = { workspace = true }
 
 [lints]
