--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,7 @@ assert_fs          = { version = "1.1.3", features = ["color-auto"] }
 assert_matches     = "1.5.0"
 backon             = { version = "1.6", default-features = false, features = ["std-blocking-sleep"] }
 build-context      = "0.1.3"
+bytes              = "1"
 bzip2              = "0.6.1"
 cargo_metadata     = "0.20.0"
 cgx                = { version = "0.0.8", path = "cgx" }
@@ -29,12 +30,13 @@ figment            = { version = "0.10.19", features = ["toml", "env"] }
 flate2             = "1.1.5"
 gix                = { version = "0.77", features = ["blocking-http-transport-reqwest", "max-performance-safe", "worktree-mutation"] }
 home               = "0.5.11"
+humantime          = "2.1"
 humantime-serde    = "1.1.1"
 ignore             = "0.4.25"
 insta              = { version = "1.45.0", features = ["filters"] }
 predicates         = "3.1.3"
 rand               = "0.9.2"
-reqwest            = { version = "0.13", default-features = false, features = ["blocking", "rustls", "http2", "charset", "gzip", "system-proxy"] }
+reqwest            = { version = "0.13", default-features = false, features = ["blocking", "rustls", "http2", "charset", "gzip", "system-proxy", "socks"] }
 semver             = { version = "1.0.27", features = ["serde"] }
 serde              = { version = "1.0.228", features = ["derive"] }
 serde-cyclonedx    = "0.10.0"
