feat(http): Add comprehensive HTTP client test coverage
The centralized `HttpClient` (PR #114) had zero test coverage for
config precedence logic, deserialization, CLI arg parsing, and actual
HTTP request behavior. This adds 48 new tests and fixes 3 existing
ones.

Fix existing tests in `http.rs` to follow project conventions:
replace `assert!(result.is_ok())` with `unwrap()` and
`assert!(result.is_err())` with `assert_matches!`.

Add `HttpConfigFile` deserialization tests in `config.rs` covering
full/partial/empty `[http]` sections, `deny_unknown_fields` rejection,
and `HttpConfig::default()` value verification.

Add `build_http_config` precedence tests in `config.rs` exercising
the CLI > config file > defaults chain via both `Config::load_from_dir`
(with temp config files) and direct `Config::build_http_config` calls.
The direct-call tests replace the originally-planned Cargo env var
tests, since `unsafe_code = "forbid"` prevents `std::env::set_var` in
test code.

Add HTTP CLI arg parsing tests in `cli.rs` for `--http-timeout`,
`--http-retries`, `--http-proxy`, default `None` values, and
correct splitting of HTTP flags after the crate spec into binary args.

Add `HttpClient` construction tests in `http.rs` for non-default
timeout, zero retries, `https://` proxy, `socks5h://` proxy, and
`is_connection_error` returning `false` for non-`HttpRequest` error
variants.

Add `httpmock` dev dependency and mock-based HTTP tests in `http.rs`
covering `classify_response`/retry behavior (200/404/403 not retried,
429/500/503 retried, exhausted retries, zero retries), `try_download`
behavior (200 returns bytes, 404 returns `None`, 403 returns error),
and header/method tests (user-agent sent, custom headers forwarded,
HEAD method dispatched, HEAD retries on 429).

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ figment            = { version = "0.10.19", features = ["toml", "env"] }
 flate2             = "1.1.5"
 gix                = { version = "0.77", features = ["blocking-http-transport-reqwest", "max-performance-safe", "worktree-mutation"] }
 home               = "0.5.11"
+httpmock           = "0.8.2"
 humantime          = "2.1"
 humantime-serde    = "1.1.1"
 ignore             = "0.4.25"
