--- a/cgx-core/Cargo.toml
+++ b/cgx-core/Cargo.toml
@@ -60,6 +60,7 @@ ctrlc = { workspace = true }
 [dev-dependencies]
 assert-json-diff   = { workspace = true }
 assert_matches     = { workspace = true }
+httpmock           = { workspace = true }
 insta              = { workspace = true }
 rand               = { workspace = true }
 tracing-subscriber = { workspace = true }
